#45 Add GET /faculties and /locations
