# backend/people/src/main/resources/static/openapi/api.yml
@@ -10,17 +10,19 @@ servers:
   - url: /api
     x-internal: true
 security:
-  - bearerAuth: [USER, ADMIN]
+  - bearerAuth: [ USER, ADMIN ]
 tags:
   - name: Monitoring
   - name: People
+  - name: Faculties
+  - name: Locations
 paths:
   /monitoring/healthcheck:
     get:
-      tags: [Monitoring]
+      tags: [ Monitoring ]
       summary: Checks if service is alive
       description: Returns 'ok', if service is alive, else we will cry
-      security: []
+      security: [ ]
       responses:
         "200":
           description: OK
@@ -39,11 +41,11 @@ paths:
           $ref: "#/components/responses/Unexpected"
   /people:
     get:
-      tags: [People]
+      tags: [ People ]
       summary: Get filtered people list
       description: Returns list of people, filtered by given conditions
       security:
-        - bearerAuth: [ADMIN]
+        - bearerAuth: [ ADMIN ]
       parameters:
         - name: offset
           in: query
@@ -235,7 +237,7 @@ paths:
           $ref: "#/components/responses/Unexpected"
   /people/{person_id}:
     get:
-      tags: [People]
+      tags: [ People ]
       summary: Get person by id
       description: Returns a person with a given id
       parameters:
@@ -260,11 +262,11 @@ paths:
         default:
           $ref: "#/components/responses/Unexpected"
     delete:
-      tags: [People]
+      tags: [ People ]
       summary: Delete person by id
       description: Deletes a person with a given id forever?
       security:
-        - bearerAuth: [ADMIN]
+        - bearerAuth: [ ADMIN ]
       parameters:
         - $ref: "#/components/parameters/PersonIdPath"
       responses:
@@ -281,7 +283,7 @@ paths:
         default:
           $ref: "#/components/responses/Unexpected"
     patch:
-      tags: [People]
+      tags: [ People ]
       summary: Update a person
       description: Updates a person with a given id
       parameters:
@@ -309,6 +311,40 @@ paths:
           $ref: "#/components/responses/503"
         default:
           $ref: "#/components/responses/Unexpected"
+  /faculties:
+    get:
+      tags: [ Faculties ]
+      summary: Get all faculties
+      description: Returns all faculties list
+      security:
+        - bearerAuth: [ USER ]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Faculty"
+                maxItems: 512
+  /locations:
+    get:
+      tags: [ Locations ]
+      summary: Get all locations
+      description: Returns all locations list
+      security:
+        - bearerAuth: [ USER ]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Location"
+                maxItems: 512
 components:
   securitySchemes:
     bearerAuth:
@@ -499,9 +535,9 @@ components:
       required:
         - id
       anyOf:
-        - required: [small]
-        - required: [medium]
-        - required: [large]
+        - required: [ small ]
+        - required: [ medium ]
+        - required: [ large ]
     Interest:
       type: object
       properties:
